# p2p-shipyard

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  build.rs  custom-cargo-zigbuild.nix  custom-go-compiler.nix  flake.nix  package.json  pnpm-lock.yaml  run_test_template.sh
.changes/: config.json
.github/workflows/: build-and-deploy-site.yaml  build-scaffold-holochain-runtime.yaml  build-scaffold-tauri-app.yaml  cache-devshells.yaml  test.yml
crates/scaffold-holochain-runtime/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-holochain-runtime/src/: lib.rs
crates/scaffold-holochain-runtime/templates/holochain-runtime/: README.md.hbs  flake.nix.hbs  index.html.hbs  package.json.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/.github/workflows/: release-tauri-app.yaml.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/src-tauri/: Cargo.toml.hbs  tauri.conf.json.hbs
crates/scaffold-holochain-runtime/templates/holochain-runtime/src-tauri/src/: lib.rs.hbs
crates/scaffold-tauri-app/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-tauri-app/src/: lib.rs
crates/scaffold-tauri-app/templates/end-user-happ/: Cargo.toml.hbs
crates/scaffold-tauri-happ/: Cargo.toml  default.nix  run_test.sh
crates/scaffold-tauri-happ/src/: lib.rs
crates/scaffold-tauri-happ/templates/end-user-happ/.github/workflows/: release-tauri-app.yaml.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/: Cargo.toml.hbs  tauri.conf.json.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/src-tauri/src/: lib.rs.hbs
crates/scaffold-tauri-happ/templates/end-user-happ/ui/: vite.config.ts.hbs
crates/scaffold_executable_happ/: Cargo.toml
crates/scaffold_executable_happ/src/: lib.rs
crates/scaffold_holochain_runtime/: Cargo.toml  default.nix
crates/scaffold_holochain_runtime/src/: lib.rs
crates/scaffold_holochain_runtime/templates/holochain-runtime/: flake.nix.hbs  package.json.hbs
crates/scaffold_tauri_app/: Cargo.toml  default.nix  run_test.sh
crates/scaffold_tauri_app/fixture/: flake.nix
crates/scaffold_tauri_app/fixture/workdir/: web-happ.yaml
crates/scaffold_tauri_app/src/: lib.rs
crates/tauri-plugin-holochain/: Cargo.toml
crates/tauri-plugin-holochain/src/: commands.rs  http_server.rs  launch.rs  lib.rs
crates/tauri-plugin-holochain/src/commands/: get_runtime_info.rs  install_web_app.rs  list_apps.rs  open_app.rs
docs/: android-setup.md  getting-to-know-tauri.md  gotchas.md  how-to-create-a-holochain-runtime.md  how-to-create-an-executable-happ.md  index.md  license.md  package.json  troubleshooting.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/documentation/: android-setup.md  faqs.md  getting-to-know-tauri.md  how-to-create-a-holochain-runtime.md  how-to-create-an-end-user-happ.md  how-to-create-an-executable-happ.md  troubleshooting.md
docs/documentation/android/: building-for-production.md  developing.md  device-setup.md  project-setup.md  publishing.md  setup.md  shipping.md
docs/license/: license.md
examples/end-user-happ/: Cargo.toml  flake.nix  package-lock.json  package.json
examples/end-user-happ/dnas/forum/workdir/: dna.yaml
examples/end-user-happ/dnas/forum/zomes/integrity/posts/src/: lib.rs
examples/end-user-happ/forum/tests/: package.json
examples/end-user-happ/src-tauri/: Cargo.toml  tauri.conf.json
examples/end-user-happ/src-tauri/src/: lib.rs
examples/end-user-happ/ui/: package.json
examples/end-user-happ/ui/src/: contexts.ts
examples/end-user-happ/ui/src/forum/posts/: all-posts.ts  create-comment.ts  edit-post.ts
examples/executable-happ/: Cargo.toml  flake.nix  package.json  vite.config.js
examples/executable-happ/dnas/forum/zomes/coordinator/posts/src/: comment.rs
examples/executable-happ/forum/: package.json
examples/executable-happ/forum/tests/: package.json
examples/executable-happ/src/: App.svelte
examples/executable-happ/src-tauri/: Cargo.toml  tauri.conf.json
examples/executable-happ/src-tauri/src/: lib.rs  main.rs
examples/executable-happ/ui/: package.json  vite.config.ts
examples/executable-happ/ui/src/forum/posts/: all-posts.ts  comments-for-post.ts  create-post.ts  post-detail.ts
examples/holochain-runtime/: flake.nix  index.html  package-lock.json  package.json
examples/holochain-runtime/src/: main.ts
examples/holochain-runtime/src-tauri/: Cargo.toml  tauri.conf.json
examples/holochain-runtime/src-tauri/src/: lib.rs
examples/tauri-app/: Cargo.toml  flake.nix  package.json  vite.config.js
examples/tauri-app/dnas/forum/zomes/coordinator/posts/src/: post.rs
examples/tauri-app/dnas/forum/zomes/integrity/posts/src/: comment.rs  post.rs
examples/tauri-app/forum/: .gitignore  README.md  package.json
examples/tauri-app/forum/tests/: package.json
examples/tauri-app/forum/tests/src/forum/posts/: all-posts.test.ts  comment.test.ts  post.test.ts
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/ui/: package.json
examples/tauri-app/ui/src/: holochain-app.ts
examples/tauri-app/ui/src/forum/posts/: all-posts.ts  comment-detail.ts  comments-for-post.ts  create-comment.ts  create-post.ts  edit-post.ts  post-detail.ts
nix/: holochain-tauri-app-deps.nix  holochain-tauri-happ-artifacts.nix
nix/modules/: tauri-cli.nix
nix/reference-tauri-happ/: Cargo.toml
permissions/schemas/: schema.json
src/: config.rs  desktop.rs  error.rs  filesystem.rs  http_server.rs  launch.rs  lib.rs  mobile.rs
src/commands/: open_app.rs  sign_zome_call.rs
tauri-plugin-holochain/: Cargo.toml
tauri-plugin-holochain/permissions/autogenerated/: reference.md
tauri-plugin-holochain/src/: config.rs  error.rs  filesystem.rs  http_server.rs  launch.rs  lib.rs
tauri-plugin-holochain/src/commands/: get_runtime_info.rs  install_web_app.rs  open_app.rs
templates/happ-open-dev/web-app/: Cargo.toml.hbs  flake.nix.hbs  happ.nix.hbs  package.json.hbs  package.json.hbs.~1~
webview-src/: index.ts
(+23 files in other folders)
