[workspace]
members = ["crates/*"]
resolver = "2"

[patch.crates-io]
# TODO: remove these patches once https://github.com/holochain/tx5/issues/87 is resolved
tx5-go-pion-sys = { git = "https://github.com/guillemcordoba/tx5", branch = "custom-go" }
tx5-go-pion-turn = { git = "https://github.com/guillemcordoba/tx5", branch = "custom-go" }
