[package]
name = "scaffold-holochain-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scaffold_holochain_runtime"
path = "src/lib.rs"

[[bin]]
name = "scaffold-holochain-runtime"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.81"
ignore = "0.4"
serde = "1"
clap = {version = "4.5.4", features = ["derive"]}
file_tree_utils = { git ="https://github.com/holochain-open-dev/infrastructure", branch ="main"}
templates_scaffolding_utils = { git ="https://github.com/holochain-open-dev/infrastructure", branch ="main"}
include_dir = "0.7.3"
thiserror = "1"
handlebars = "5.1.0"
build-fs-tree = "0.4"
path-clean = "1"
dialoguer = "0.11"
colored = "2.1.0"
