[package]
name = "tauri-plugin-holochain"
version = "0.0.0"
authors = ["guillem@darksoil.studio"]
description = ""
edition = "2021"
rust-version = "1.75"
links = "tauri-plugin-holochain"

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [
  "devtools",
  "native-tls-vendored",
] }

# Holochain dependencies
mr_bundle = "0.3.1-rc"
holochain = "=0.3.1-rc.0"
holochain_types = "0.3.1-rc"
holochain_keystore = "0.3.1-rc"
holochain_conductor_api = "0.3.1-rc"

# Lair dependencies
hc_seed_bundle = "0.2"
lair_keystore = "0.4.0"
lair_keystore_api = "0.4.0"

# Holochain client
holochain_client = { version = "0.5.0-rc.2" }

serde_json = "1"
sha256 = "1"
log = "0.4"
symlink = "0.1.0"
nanoid = "0.4.0"
async-std = "1.12"
serde = "1.0.193"
thiserror = "1.0"
url = "2.4.0"
url2 = "0.0.6"
zip = { version = "0.6" }
bzip2 = { version = "0.4", features = ["static"] }
portpicker = "0.1"
mime_guess = "2.0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tls-listener = "0.8"
futures = "0.3"
either = "*"
tokio = "1"
one_err = "0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta", features = ["build"] }
