[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
resolver = "2"
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "src-tauri"]

[workspace.dependencies]
hdi = "0.4.0-beta-dev"
hdk = "0.3.0-beta-dev"
serde = "1.0"

[workspace.dependencies.posts]
path = "dnas/forum/zomes/coordinator/posts"

[workspace.dependencies.posts_integrity]
path = "dnas/forum/zomes/integrity/posts"

# [patch.crates-io]
# mr_bundle = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_types = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_keystore = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_conductor_api = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_nonce = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# kitsune_p2p_timestamp = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_integrity_types = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holochain_zome_types = {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}
# holo_hash= {git ="https://github.com/guillemcordoba/holochain", branch ="lair-startup-timing"}

# holochain_client = {git ="https://github.com/guillemcordoba/holochain-client-rust", branch ="develop"}
