[package]
name = "example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "example_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", default-features = false , features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [] }
tauri-plugin-holochain = { path = "../../../tauri-plugin-holochain" }
holochain_types = { version = "0.3.1-rc" }
lair_keystore = { version = "0.4.0" }
holochain_client = { git="https://github.com/guillemcordoba/holochain-client-rust", branch = "main" }
# holochain_client = { version = "0.5.0-dev" }
log = "0.4"
tauri-plugin-log = "2.0.0-beta"
url2 = "0.0.6"
app_dirs2 = "2.5.5"
tempdir = "0.3.7"
anyhow = "1"
